--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,9 @@
 /* HTML selectors */
-main {
+/* main {
     margin: 10px;
-}
+} */
 
-nav ul {
+/* nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -24,10 +24,58 @@ nav ul a {
     padding: 10px;
     text-decoration: none;
     color: grey
-}
+} */
 
 /* CLASS selectors */
-.show li {
+/* .show li {
     display: block;
-}
+} */
 /* ID selectors */
+
+/* .mobile-container {
+    max-width: 480px;
+    background-color: #555;
+    height: 500px;
+    color: white;
+    border-radius: 10px;
+  } */
+  .container {
+    max-width: 480px;
+    margin: auto;
+    height: 500px;
+  }
+  
+  .navigationTop {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+  
+  .navigationTop .weeklyLinks {
+    display: none;
+  }
+  
+  .navigationTop a, label {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  .navigationTop a.menuIcon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  .navigtaionTop a:hover {
+    background-color: #ddd;
+    /* color: black; */
+  }
+  
+  label {
+      background-color: #555;
+  }
