--- a/week9/styles/teamActivityStyle.css
+++ b/week9/styles/teamActivityStyle.css
@@ -1,7 +1,7 @@
 html {
     font-size: 10px;
-    background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
-    background-size: cover;
+    /* background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center; */
+    /* background-size: cover; */
   }
   
   body,html {
@@ -12,8 +12,7 @@ html {
   
   .keys {
     display: flex;
-    flex: 1;
-    min-height: 100vh;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
   }
