--- a/week13/styles/pokeStylesW13.css
+++ b/week13/styles/pokeStylesW13.css
@@ -3,7 +3,7 @@
     grid-column-gap: 8px;
     grid-row-gap: 8px;
     grid-template-columns: auto auto auto;
-    background-color:orangered;
+    background-color:#C04c4b;
     padding: 0px;
 }
   
@@ -14,14 +14,15 @@ ol {
 .stylePokemonListItem {
     background-color: white;
     border: 1px solid white;
-    border-radius: 15px;
+    border-radius: 20px;
     padding: 5px;
     font-size: 5px;
     text-align: center;
+    color: #6EA4BB;
 }
 
 body {
-    background-color: orangered;
+    background-color: #C04c4b;
 }
 
 p, h1 {
@@ -32,4 +33,24 @@ p, h1 {
 img {
     width: "50"; 
     height: "60";
+}
+
+button {
+    border: 1px black;
+    border-radius: 20px;
+    position: relative;
+    padding: 10px;
+    margin: 5px;
+    width: 167px;
+    background-color: #464646;
+    box-shadow: 2px 3px 10px;
+}
+
+footer, header{
+    background-color: black;
+    color: white;
+    padding-top: 8px;
+    padding-left: 0px;
+    padding-right: 0px;
+
 }
