--- a/week13/styles/pokeStylesW13.css
+++ b/week13/styles/pokeStylesW13.css
@@ -6,7 +6,15 @@
     background-color:#C04c4b;
     padding: 0px;
 }
-  
+
+#btnContainer {
+    display: grid;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+}
+
 ol {
     list-style-type: none;
 }
@@ -41,7 +49,7 @@ button {
     position: relative;
     padding: 10px;
     margin: 5px;
-    width: 106px;
+    width: 118px;
     background-color: #464646;
     box-shadow: 2px 3px 10px;
 }
