--- a/styles/index.css
+++ b/styles/index.css
@@ -1,44 +1,3 @@
-/* HTML selectors */
-/* main {
-    margin: 10px;
-} */
-
-/* nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li:first-child {
-    display: block;
-}
-
-nav ul li {
-    display: none;
-}
-
-nav ul a {
-    border: solid black;
-    background-color: black;
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    color: grey
-} */
-
-/* CLASS selectors */
-/* .show li {
-    display: block;
-} */
-/* ID selectors */
-
-/* .mobile-container {
-    max-width: 480px;
-    background-color: #555;
-    height: 500px;
-    color: white;
-    border-radius: 10px;
-  } */
   .container {
     max-width: 480px;
     margin: auto;
@@ -73,7 +32,7 @@ nav ul a {
   
   .navigtaionTop a:hover {
     background-color: #ddd;
-    /* color: black; */
+    color: black;
   }
   
   label {
