--- a/week13/styles/pokeStylesW13.css
+++ b/week13/styles/pokeStylesW13.css
@@ -3,17 +3,14 @@
     grid-column-gap: 8px;
     grid-row-gap: 8px;
     grid-template-columns: auto auto auto;
-    background-color:#C04c4b;
+    background-color: #3B4CCA;
     padding: 0px;
 }
 
 #btnContainer {
-    display: grid;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    grid-template-columns: auto auto auto;
-    padding: 10px;
-}
+    display: flex;
+    flex-wrap: wrap;
+} 
 
 ol {
     list-style-type: none;
@@ -22,15 +19,16 @@ ol {
 .stylePokemonListItem {
     background-color: white;
     border: 1px solid white;
-    border-radius: 20px;
+    border-radius: 30px;
     padding: 5px;
     font-size: 5px;
     text-align: center;
-    color: #6EA4BB;
+    color: black;
+    
 }
 
 body {
-    background-color: #C04c4b;
+    background-color: #3B4CCA;
 }
 
 p, h1 {
@@ -43,27 +41,27 @@ img {
     height: "60";
 }
 
-button {
-    border: 1px black;
-    border-radius: 20px;
-    position: relative;
+#previousBtn, #nextBtn, #favoritesBtn {
+    border: 1px #FFDE00;
+    border-radius: 60px;
     padding: 10px;
     margin: 5px;
     width: 100px;
-    background-color: #464646;
+    background-color: #FFDE00;
     box-shadow: 2px 3px 10px;
+
 }
 
-header {
-    background-color: #6EA4BB;
+footer{
+    background-color: #FF0000;
     color: white;
     padding: 8px;
     text-align: center;
 }
-footer {
-    background-color: black;
+
+header{
+    background-color: #FF0000;
     color: white;
     padding: 8px;
     text-align: center;
-
 }
