--- a/week13/styles/pokeStylesW13.css
+++ b/week13/styles/pokeStylesW13.css
@@ -48,26 +48,24 @@ img {
 }
 
 #previousBtn, #nextBtn, #favoritesBtn {
-    border: 1px #E6CE2B;
+    border: 1px #0000;
     border-radius: 60px;
     padding: 10px;
     margin: 5px;
     margin-bottom: 30px;
     width: 107px;
     background-color: #E6CE2B;
-    box-shadow: 2px 3px 10px;
-
 }
 
 footer{
-    background-color: #E13620;
+    background-color: #464646;
     color: white;
     padding: 8px;
     text-align: center;
 }
 
 header{
-    background-color: #E13620;
+    background-color: #464646;
     color: white;
     padding: 8px;
     text-align: center;
