--- a/week13/styles/pokeStylesW13.css
+++ b/week13/styles/pokeStylesW13.css
@@ -14,7 +14,7 @@
     display: grid;
     grid-column-gap: 8px;
     grid-row-gap: 15px;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 114px 114px 114px;
     background-color: #FFFF;
     padding: 0px;
     padding-top: 15px;
@@ -23,8 +23,8 @@
 
 #btnContainer {
     display: grid;
-    grid-column-gap: 4px;
-    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 0px;
+    grid-template-columns: 91.5px 91.5px 91.5px 91.5px;
     padding: 0px;
 } 
 
@@ -32,7 +32,16 @@ ol {
     list-style-type: none;
 }
 
-
+/* .PokeName {
+    z-index: 1px;
+    padding-top:5px;
+    padding-bottom: 5px;
+}
+.pokeSpritesCss {
+    height: 50px;
+    width: 50px;
+    z-index: 0px;
+} */
 
 body {
     background-color: #FFFF;
@@ -40,7 +49,6 @@ body {
 
 p, h1 {
     font-size: small;
-    
 }
 
 img {
