--- a/week13/styles/pokeStylesW13.css
+++ b/week13/styles/pokeStylesW13.css
@@ -14,7 +14,7 @@
     display: grid;
     grid-column-gap: 8px;
     grid-row-gap: 15px;
-    grid-template-columns: 114px 114px 114px;
+    grid-template-columns: auto auto auto;
     background-color: #FFFF;
     padding: 0px;
     padding-top: 15px;
@@ -31,17 +31,6 @@
 ol {
     list-style-type: none;
 }
-
-/* .PokeName {
-    z-index: 1px;
-    padding-top:5px;
-    padding-bottom: 5px;
-}
-.pokeSpritesCss {
-    height: 50px;
-    width: 50px;
-    z-index: 0px;
-} */
 
 body {
     background-color: #FFFF;
