--- a/week8/styles/teamActivityW8.css
+++ b/week8/styles/teamActivityW8.css
@@ -13,16 +13,26 @@
     padding-bottom: 8px;
     list-style-type: none;
 }
-#prevBTN {
-    margin-left: 125px;
-    margin-bottom: 5px;
-}
-#nextBTN {
-    margin-right: 125px;
-    margin-bottom: 5px;
-}
 
 .Notes {
     margin-left: 140px;
     margin-bottom: 5px;
+}
+
+#buttonGrid {
+    display: grid;
+    grid-template-columns: 150px 150px 150px;
+    grid-template-rows: 50px 50px 50px;
+    grid-column-gap: 5px;
+    justify-content: center;
+}
+
+.newGameBtn, .notesLink, .linkStyling {
+    text-decoration: none;
+    border: none;
+    border-radius: 60px;
+    color: white;
+    outline: none;
+    background-color: #E13620;
+    background-image: linear-gradient(to right,#23AFCC, #E13620);
 }
